# env-settings

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: discord-commit-notify.yml
src/env_settings/: __init__.py  core.py
tests/: test_settings.py
