[project]
name = "env-settings"
version = "0.1.0"
description = "msgspec-based settings loader with .env support"
authors = [{ name = "THEROER", email = "theroer09@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "msgspec>=0.19.0,<0.20",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2,<9",
    "pytest-cov>=7.0.0,<8",
    "ruff>=0.13.1,<0.14",
    "mypy>=1.19.1,<2",
]

[tool.hatch.build.targets.sdist]
include = ["src/env_settings"]

[tool.hatch.build.targets.wheel]
include = ["src/env_settings"]

[tool.hatch.build.targets.wheel.sources]
"src/env_settings" = "env_settings"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
