[project]
name = "env-settings"
version = "1.3.0"
description = "msgspec-based settings loader with .env, YAML and TOML support"
authors = [{ name = "THEROER", email = "theroer09@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "msgspec>=0.21.0,<0.22",
    "pyyaml>=6.0,<7",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.2,<10",
    "pytest-cov>=7.0.0,<8",
    "ruff>=0.15.5,<0.16",
    "mypy>=1.19.1,<2",
]

[tool.hatch.build.targets.sdist]
include = ["src/env_settings"]

[tool.hatch.build.targets.wheel]
include = ["src/env_settings"]

[tool.hatch.build.targets.wheel.sources]
"src/env_settings" = "env_settings"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
